# COMPUTER1

./: CMakeLists.txt
include/: cpu.h  disc.h  gpu.h  kbd.h  ram.h
src/: CMakeLists.txt  cpu.cpp  disc.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
